# sandbox

rust/bf-jit/: Cargo.toml
rust/bf-jit/src/: frontend.rs  grammar.rustpeg  jit.rs  main.rs  optimizer.rs
rust/bf-optimize/: Cargo.toml
rust/bf-optimize/src/: frontend.rs  grammar.rustpeg  interpreter.rs  main.rs
rust/bf-simple/: Cargo.toml
rust/bf-simple/src/: main.rs
rust/clock/: Cargo.toml
rust/clock/src/: main.rs
rust/rustpeg-json/: Cargo.toml
rust/rustpeg-json/src/: frontend.rs  grammar.rustpeg  lib.rs
rust/shell/: .gitignore  Cargo.toml
rust/shell/src/: main.rs
rust/sicp-lisp/: Cargo.toml  README.md
rust/sicp-lisp/src/: environment.rs  eval.rs  grammar.rustpeg  main.rs  sexp.rs  value.rs
rust/thread-pool/: Cargo.toml  README.md
rust/thread-pool/src/: lib.rs
rust/wafwaf/: Cargo.toml  README.md
rust/wafwaf/examples/: counter.rs  hello.rs  json.rs
rust/wafwaf/src/: codec.rs  lib.rs  main.rs
rust/wasm-3d-game-of-life/: 1.bootstrap.js  2.bootstrap.js  Cargo.toml  README.md  bootstrap.js
rust/wasm-3d-game-of-life/src/: lib.rs
rust/wasm-3d-game-of-life/www/: README.md  common.js  index.html  index.js  index.ts  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webxr-polyfill.js  webxr-worker.js
