[package]
name = "clock"
version = "0.1.0"
authors = ["Seikichi KONDO <seikichi@kmc.gr.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.4"
glium = "0.24"
rusttype = { version = "0.7.6", features = ["gpu_cache"] }
chrono = "0.4"
