[package]
name = "wafwaf"
version = "0.1.0"
authors = ["Seiichi KONDO <seikichi@kmc.gr.jp>"]
edition = "2018"

[dependencies]
futures-preview = "=0.3.0-alpha.18"
tokio = "=1.8.4"

bytes = "0.4"
http = "0.1"
httparse = "1.0"
path-tree = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.1"
